@@ -10,16 +10,16 @@ Version 2.18
 * The following bugs are resolved with this release:
 
   2546, 2560, 5159, 6809, 10060, 10062, 10357, 10686, 11120, 11561, 12387,
-  12723, 13550, 13889, 13951, 13988, 14142, 14176, 14200, 14280, 14293,
-  14317, 14327, 14478, 14496, 14582, 14686, 14812, 14888, 14894, 14908,
-  14920, 14952, 14964, 14981, 14982, 14985, 14994, 14996, 15000, 15003,
-  15006, 15007, 15014, 15020, 15023, 15036, 15054, 15055, 15062, 15078,
-  15084, 15085, 15086, 15160, 15214, 15221, 15232, 15234, 15283, 15285,
-  15287, 15304, 15305, 15307, 15309, 15327, 15330, 15335, 15336, 15337,
-  15339, 15342, 15346, 15359, 15361, 15366, 15380, 15381, 15394, 15395,
-  15405, 15406, 15409, 15416, 15418, 15419, 15423, 15424, 15426, 15429,
-  15441, 15442, 15448, 15465, 15480, 15485, 15488, 15490, 15493, 15497,
-  15506, 15529.
+  12723, 13550, 13889, 13951, 13988, 14142, 14176, 14200, 14256, 14280,
+  14293, 14317, 14327, 14478, 14496, 14582, 14686, 14812, 14888, 14894,
+  14908, 14920, 14952, 14964, 14981, 14982, 14985, 14994, 14996, 15000,
+  15003, 15006, 15007, 15014, 15020, 15023, 15036, 15054, 15055, 15062,
+  15078, 15084, 15085, 15086, 15160, 15214, 15221, 15232, 15234, 15283,
+  15285, 15287, 15304, 15305, 15307, 15309, 15327, 15330, 15335, 15336,
+  15337, 15339, 15342, 15346, 15359, 15361, 15366, 15380, 15381, 15394,
+  15395, 15405, 15406, 15409, 15416, 15418, 15419, 15423, 15424, 15426,
+  15429, 15441, 15442, 15448, 15465, 15480, 15485, 15488, 15490, 15493,
+  15497, 15506, 15529.
 
 * CVE-2013-0242 Buffer overrun in regexp matcher has been fixed (Bugzilla
   #15078).
